--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="time">Time</string>
     <string name="save">Save</string>
 
+    <string name="login">Login</string>
+    <string name="logout">Log out</string>
+    <string name="settings">Settings</string>
+    <string name="boostTemperature">Boost temperature (1–6)</string>
+    <string name="boostDuration">Boost duration (min)</string>
+    <string name="minutes">Minutes</string>
+
 </resources>
