--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="save">Save</string>
 
     <string name="login">Login</string>
-    <string name="logout">Log out</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="logout">Logout</string>
     <string name="settings">Settings</string>
     <string name="boostTemperature">Boost temperature (1–6)</string>
     <string name="boostDuration">Boost duration (min)</string>
