--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,9 @@
     <string name="minutes">Minutes</string>
     <string name="channel_name">Normal</string>
     <string name="channel_description">Normal notifications</string>
-    <string name="desired_temperature">Desired Temp</string>
-    <string name="current_temperature">Current Temp</string>
-    <string name="last_synchronization">Last Sync</string>
+    <string name="desired_temperature">Desired temp</string>
+    <string name="current_temperature">Current temp</string>
+    <string name="last_synchronization">Last sync</string>
     <string name="boost_active_till">Boost active till:</string>
     <string name="delete_boost">delete boost</string>
     <string name="email_address">Email address</string>
